# rust_tutorial

go_tutorial/: hello_.go.bak  main.go  old.go.bak  version_bump.go.bak
rust_tutorial/: Cargo.toml
rust_tutorial/src/: main.rs  version_bump.rs
src/: main.rs  main_1.rs  version_bump.rs
